<resources>
    <string name="app_name">Coach Me</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_multiselect_list">Choose sports</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_create_event">Create event</string>
    <string name="title_activity_chats_overview">Chats overview</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_coaches_list">Nearby coaches</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_edit_text">Edit</string>
    <string name="title_activity_group_event_details">Event details</string>
    <string name="title_activity_group_events_list">Group events</string>

    <string name="chats">Chats</string>
    <string name="my_profile">My profile</string>
    <string name="profile_details">Profile details</string>
</resources>